Compiler/tests/good/Comments/03_comment.rs
// Comment 1
// Comment 2
fn main(){ // Comment 3
  return;// Comment 4
}// Comment 5
// Comment 6
