Compiler/tests/bad/Vectors/02_vector.rs
fn main(){
    let x : Vec<bool> = vec![5,5,6];
}